--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -22,3 +22,7 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+canvas:focus, a:focus, button:focus, .button.alt:focus, input:focus, textarea:focus, input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focus, input[type="email"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="search"]:focus {
+    outline-color: transparent;
+}
