--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -332,6 +332,12 @@ h2.tombstone:hover {
   left: 44vw
 }
 
+#detail-tombstone h1:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: rgb(102,153,255);
+}
+
 #how-to {
   font-family: "regular";
   color: rgba(255,255,255,.2);
@@ -420,7 +426,6 @@ canvas:hover {
   padding: 2px;
   font-family: "regular";
   text-decoration: underline;
-
   color: rgba(102,153,255,.6);
 }
 
